--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;500;700&family=Source+Sans+Pro:wght@300;400;600;700&display=swap" rel="stylesheet" />
-		<link rel="icon" href="<%= BASE_URL %>/icons/favicon.png" />
+		<link rel="icon" href="<%= BASE_URL %>/favicon.png" />
 		<title>Money Manager</title>
 	</head>
 	<body>
